# try-jupyter

./: .gitignore  .readthedocs.yml  README.md  build-environment.yml  cockle-config-in.json  conf.py  environment-cpp.yml  environment-python.yml  environment-r.yml  environment-sqlite.yml  environment.yml  jupyter-lite.json  jupyter_lite_config.json  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  rtd-preview.yml  test-notebooks.yml
api/contents/: all.json
api/contents/data/: all.json
api/contents/notebooks/: all.json
api/contents/pyolite/: all.json
api/contents/xeus-lua/: all.json
api/contents/xeus-sqlite/: all.json
api/contents/xeus-wren/: all.json
api/translations/: fr_FR.json  zh_CN.json
content/notebooks/: 3rd-party-libs.ipynb  Intro.ipynb  Lorenz.ipynb  cpp-smallpt.ipynb  cpp-third-party-libs.ipynb  cpp.ipynb  r.ipynb  sqlite.ipynb
extensions/@jupyterlab/fasta-extension/: package.json
extensions/@jupyterlab/geojson-extension/: package.json
extensions/@jupyterlite/p5-kernel-extension/: build_log.json  package.json
extensions/@jupyterlite/xeus-lua-kernel/: package.json
extensions/@jupyterlite/xeus-sqlite-kernel/: package.json
extensions/@jupyterlite/xeus-wren-kernel/: install.json  package.json
extensions/bqplot/: package.json
extensions/bqplot/static/: 133.2df0d387bef0b99e239a.js  568.829152b9fd5d5b1dc823.js  remoteEntry.99c828c2ee313756f7dc.js
extensions/ipycanvas/: package.json
extensions/ipycanvas/static/: 136.b0e8ce509d20114dc0bc.js  367.085b2bf14dc164930556.js  367.8d7762410a24bfb7a8c9.js  901.17af8008fb5e02488406.js  remoteEntry.5ffed1c4b9b9ce1f7b00.js  remoteEntry.9693baf6fc7fc4c880d2.js  remoteEntry.d3f93277b65928cb96a9.js
extensions/jupyter-leaflet/: package.json
extensions/jupyter-leaflet/static/: 138.002dd8f96b6a3a975f92.js  138.73f84e4378b8165bf802.js  remoteEntry.87c5f425be4cc49a1717.js  remoteEntry.8f5cefaa26fbae099326.js
extensions/jupyter-matplotlib/: package.json
extensions/jupyter-matplotlib/static/: 108.505cfe5ea5e296cca885.js  108.549e99e5841737901dce.js  480.05689dae15d4ca21a7c9.js  480.931db98fa6c076228ffd.js  686.67b88b57d9a715f078cf.js  686.a4f51a31261ecefe2aef.js  remoteEntry.6b5d328600b8f618f724.js  remoteEntry.710d0093522e0289f99a.js
extensions/jupyter-wren-syntax/: build_log.json  install.json  package.json
extensions/jupyter-wren-syntax/static/: lib_index_js.257e7af93ee618f7d9c5.js  lib_index_js.257e7af93ee618f7d9c5.js.map  remoteEntry.a7ffe26201ed2eee8505.js  (+6 more)
extensions/jupyterlab-drawio/: package.json
extensions/jupyterlab-plotly/: package.json
extensions/jupyterlab-tour/: package.json
extensions/jupyterlab_pygments/: package.json
files/: README.md
files/notebooks/: Lorenz.ipynb  sqlite.ipynb
lab/: index.html
repl/: index.html
retro/consoles/: index.html
retro/edit/: index.html
retro/notebooks/: index.html
retro/tree/: index.html
scripts/: add_plausible.py  filter_xeus_kernels.py
ui-tests/: conftest.py  test_notebooks.py  utils.py
(+56 files in other folders)
