[project]
authors = [{name = "Project Jupyter", email = "jupyter@googlegroups.com"}]
name = "try-jupyter"
dependencies = ["jupyterlab-open-url-parameter>=0.3.0"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "win-64", "osx-arm64"]

[tool.pixi.tasks]
clean = "rm -rf .jupyterlite.doit.df dist"
build = "jupyter lite build"
filter-kernels = "python scripts/filter_xeus_kernels.py dist"
test = "pytest ui-tests/ -v"
readthedocs = "rm -rf $READTHEDOCS_OUTPUT/html && cp -r dist $READTHEDOCS_OUTPUT/html"

[tool.pixi.dependencies]
python = ">=3.12"
mamba = ">=2.4.0,<3"
pydata-sphinx-theme = ">=0.16.1,<0.17"
myst-parser = ">=4.0.1,<5"
bqplot = ">=0.12.45,<0.13"
ipycanvas = ">=0.9.1"
ipyleaflet = ">=0.20.0,<0.21"
ipympl = ">=0.8.2"
ipywidgets = ">=8.1.7"
jupyterlab = ">=4.5.0,<5"
jupyterlab-language-pack-fr-fr = ">=4.4.post3,<5"
jupyterlab-language-pack-zh-cn = ">=4.4.post3,<5"
jupyterlab-fasta = ">=3.3.0"
jupyterlab-geojson = ">=3.4.0"
jupyterlab-night = ">=0.5.2,<0.6"
jupyterlite-core = ">=0.7.0,<0.8"
jupyterlite-pyodide-kernel = ">=0.7.0,<0.8"
jupyterlite-terminal = ">=1.1.0,<2"
jupyterlite-xeus = ">=4.3.0,<5"
notebook = ">=7.5.0,<8"
pip = ">=25.3,<26"
plotly = ">=6"
micromamba = ">=2.0.5"
nodejs = ">=22"
pytest-playwright = ">=0.7.1"
pytest-html = ">=4.1.1"
pytest-rerunfailures = ">=15.0,<16"

[tool.pytest.ini_options]
testpaths = ["ui-tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --html=ui-tests/report.html --self-contained-html"
